--- a/EmailPush.Worker/EmailPush.Worker.csproj
+++ b/EmailPush.Worker/EmailPush.Worker.csproj
@@ -8,11 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
-	<PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
+    <Compile Remove="Consumers\**" />
+    <Content Remove="Consumers\**" />
+    <EmbeddedResource Remove="Consumers\**" />
+    <None Remove="Consumers\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Consumers\" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+	<PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
   </ItemGroup>
 </Project>
