--- a/EmailPush.Worker/EmailPush.Worker.csproj
+++ b/EmailPush.Worker/EmailPush.Worker.csproj
@@ -16,6 +16,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
-	<PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
+    <PackageReference Include="MassTransit" Version="8.0.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EmailPush.Domain\EmailPush.Domain.csproj" />
+    <ProjectReference Include="..\EmailPush.Infrastructure\EmailPush.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
