--- a/EmailPush/appsettings.json
+++ b/EmailPush/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EmailPushDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=EmailPush.db"
   }
 }
