Integrate CampaignService into CampaignsController and update project references it is beacuse  email validation should be in service, sevice layer can be tested by mocked better clean arch

--- a/EmailPush/EmailPush.csproj
+++ b/EmailPush/EmailPush.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\EmailPush.Domain\EmailPush.Domain.csproj" />
     <ProjectReference Include="..\EmailPush.Infrastructure\EmailPush.Infrastructure.csproj" />
+    <ProjectReference Include="..\EmailPush.Application\EmailPush.Application.csproj" />
   </ItemGroup>
 
 </Project>
