--- a/EmailPush.Application/EmailPush.Application.csproj
+++ b/EmailPush.Application/EmailPush.Application.csproj
@@ -4,21 +4,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
       </PropertyGroup>
-      <ItemGroup>
-        <Compile Remove="DTOs\**" />
-        <Compile Remove="Messages\**" />
-        <Compile Remove="Services\**" />
-        <EmbeddedResource Remove="DTOs\**" />
-        <EmbeddedResource Remove="Messages\**" />
-        <EmbeddedResource Remove="Services\**" />
-        <None Remove="DTOs\**" />
-        <None Remove="Messages\**" />
-        <None Remove="Services\**" />
-      </ItemGroup>
 
       <ItemGroup>
         <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="FluentValidation" Version="11.9.0" />
         <PackageReference Include="AutoMapper" Version="13.0.1" />
+        <PackageReference Include="MassTransit" Version="8.2.0" />
+      </ItemGroup>
+
+      <ItemGroup>
+        <ProjectReference Include="..\EmailPush.Domain\EmailPush.Domain.csproj" />
       </ItemGroup>
     </Project>
