--- a/EmailPush.Api/EmailPush.Api.csproj
+++ b/EmailPush.Api/EmailPush.Api.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+    <PackageReference Include="MassTransit" Version="8.2.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.0" />
   </ItemGroup>
 
   <ItemGroup>
