--- a/EmailPush.Api/appsettings.json
+++ b/EmailPush.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=EmailPush.db"
+    "DefaultConnection": "Data Source=./EmailPush.db"
   }
 }
