--- a/EmailPush.Worker/appsettings.json
+++ b/EmailPush.Worker/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=../EmailPush/EmailPush.db"
+    "DefaultConnection": "Data Source=../EmailPush.Api/EmailPush.db"
   }
 }
