--- a/EmailPush.Api/appsettings.json
+++ b/EmailPush.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Graylog" ],
     "MinimumLevel": "Information",
     "WriteTo": [
       {
@@ -18,6 +18,14 @@
           "path": "./logs/emailpush-.log",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Graylog",
+        "Args": {
+          "HostnameOrAddress": "localhost",
+          "Port": "12201",
+          "TransportType": "Udp"
         }
       }
     ],
