--- a/EmailPush.Infrastructure/EmailPush.Infrastructure.csproj
+++ b/EmailPush.Infrastructure/EmailPush.Infrastructure.csproj
@@ -9,8 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
-    <PackageReference Include="MassTransit" Version="8.0.0" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.0" />
+    <PackageReference Include="MassTransit" Version="8.2.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
@@ -20,5 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmailPush.Domain\EmailPush.Domain.csproj" />
+    <ProjectReference Include="..\EmailPush.Application\EmailPush.Application.csproj" />
   </ItemGroup>
 </Project>
