--- a/EmailPush.Infrastructure/EmailPush.Infrastructure.csproj
+++ b/EmailPush.Infrastructure/EmailPush.Infrastructure.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="MailKit" Version="4.2.0" />
+    <PackageReference Include="Polly" Version="7.2.4" />
   </ItemGroup>
 
   <ItemGroup>
