--- a/EmailPush.Infrastructure/EmailPush.Infrastructure.csproj
+++ b/EmailPush.Infrastructure/EmailPush.Infrastructure.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -18,6 +18,5 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmailPush.Domain\EmailPush.Domain.csproj" />
-    <ProjectReference Include="..\EmailPush.Application\EmailPush.Application.csproj" />
   </ItemGroup>
 </Project>
