--- a/EmailPush.Worker/appsettings.json
+++ b/EmailPush.Worker/appsettings.json
@@ -5,6 +5,32 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Graylog" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/emailpush-worker-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Graylog",
+        "Args": {
+          "HostnameOrAddress": "localhost",
+          "Port": "12201",
+          "TransportType": "Udp"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=../EmailPush.Api/EmailPush.db"
   }
