--- a/EmailPush.Api/appsettings.json
+++ b/EmailPush.Api/appsettings.json
@@ -24,12 +24,16 @@
         "Name": "Graylog",
         "Args": {
           "HostnameOrAddress": "localhost",
-          "Port": "12201",
-          "TransportType": "Udp"
+          "Port": 12201,
+          "TransportType": "Udp",
+          "Facility": "emailpush-api"
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "EmailPush.Api"
+    }
   },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
