--- a/EmailPush.Worker/appsettings.json
+++ b/EmailPush.Worker/appsettings.json
@@ -24,12 +24,16 @@
         "Name": "Graylog",
         "Args": {
           "HostnameOrAddress": "localhost",
-          "Port": "12201",
-          "TransportType": "Udp"
+          "Port": 12201,
+          "TransportType": "Udp",
+          "Facility": "emailpush-worker"
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "EmailPush.Worker"
+    }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=../EmailPush.Api/EmailPush.db"
