--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # RabbitMQ for MassTransit message queuing
   rabbitmq:
@@ -25,6 +23,7 @@ services:
     container_name: emailpush-mongodb
     volumes:
       - mongodb_data:/data/db
+    restart: unless-stopped
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
@@ -36,11 +35,13 @@ services:
       - transport.host=localhost
       - network.host=0.0.0.0
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
     ulimits:
       memlock:
         soft: -1
         hard: -1
     mem_limit: 1g
+    restart: unless-stopped
 
   graylog:
     image: graylog/graylog:4.3
@@ -51,8 +52,13 @@ services:
       - GRAYLOG_PASSWORD_SECRET=somepasswordpepper
       - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
       - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
+      - GRAYLOG_MONGODB_URI=mongodb://mongodb:27017/graylog
+      - GRAYLOG_ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     depends_on:
       - mongodb
+      - elasticsearch
+    links:
+      - mongodb:mongo
       - elasticsearch
     ports:
       - 9000:9000
@@ -63,6 +69,7 @@ services:
         soft: -1
         hard: -1
     mem_limit: 1g
+    restart: unless-stopped
 
 volumes:
   rabbitmq_data:
